# crazyflie-lib-python-v2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release-test.yml  release.yml
cflib2/: __init__.py  _rust.pyi  trajectory.py
examples/: app_channel.py  arming.py  console.py  emergency_stop.py  emergency_watchdog.py  external_position.py  high_level_commander.py  lighthouse_angles.py  lighthouse_persist.py  log.py  param.py  platform_info.py  scan.py  swarm.py  toc_cache.py  trajectory.py
rust/: Cargo.toml
rust/src/: crazyflie.rs  error.rs  lib.rs  link_context.rs  toc_cache.rs
rust/src/subsystems/: commander.rs  console.rs  high_level_commander.rs  localization.rs  log.rs  memory.rs  mod.rs  param.rs  platform.rs
scripts/: fix_stubs.py
tests/: __init__.py  test_crazyflie.py  test_link_context.py
